# splent_feature_skin_academic

./: MANIFEST.in  pyproject.toml
src/splent_io/splent_feature_skin_academic/: __init__.py  hooks.py  routes.py
src/splent_io/splent_feature_skin_academic/assets/css/: skin_academic.css
src/splent_io/splent_feature_skin_academic/templates/skin_academic/: index.html
src/splent_io/splent_feature_skin_academic/tests/functional/: test_routes.py
src/splent_io/splent_feature_skin_academic/tests/unit/: test_services.py
